@@ -34,10 +34,20 @@ if {$entry == ""} {
     return
 }
 
+if {[istarget powerpc64-*] && [is_lp64_target]} {
+    set test "convert entry point"
+    gdb_test_multiple "p *(void(*)(void) *) $entry" $test {
+	-re " =( \\(\[^0-9\]*\\))? (0x\[0-9a-f\]+)( <.*)?\r\n$gdb_prompt $" {
+	    set entry $expect_out(2,string)
+	    pass $test
+	}
+    }
+}
+
 if ![runto "*$entry"] {
     return
 }
 gdb_test {p/x $pc} " = $entry"
 
 gdb_breakpoint "main"
-gdb_continue_to_breakpoint "main" "main.*"
+gdb_continue_to_breakpoint "main" "\\.?main.*"
