@@ -1,3 +1,9 @@
+2010-11-08  Edjunior Machado  <emachado@br.ibm.com>
+	    Luis Machado  <luisgpm@br.ibm.com>
+
+	* gdb.base/break-entry.exp: convert entry point for
+	ppc64 and expect leading `.' on ppc64's symbols
+
 2010-11-05  Doug Evans  <dje@google.com>
 
 	* gdb.base/help.exp: Update expected output.
